--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
    <title>Intro to Web Programming</title>
    <meta charset="UTF-8">
+   <script src="lab4a.js" defer></script>
+   <script src="lab4b.js" defer></script>
 </head>
 <body>
-<a href="lab1-html/lab1.html">Lab1</a>
-
-
+   <a href="lab1-html/lab1.html">Lab1: HTML</a>
+   <br>
+   <a href="lab2-expressions,scripts,objects/lab2b.html">Lab2: Expressions, Scripts, Objects</a>
+   <br>
+   <a href="lab3-canvas/lab3.html">Lab3: Canvas</a>
+   <br>
+   <a href="lab4-ifstatementspromt/lab4a.html">Lab4A: If Statements and Promt</a>
+   <br>
+   <a href="lab4-ifstatementspromt/lab4b.html">Lab4B: If Statements and Promt B</a>
+   <br>
+   <a href="lab5-loops/lab5a.html">Lab5A: Loops</a>
+   <br>
+   <a href="lab5-loops/lab5b.html">Lab5B: Loops</a>
+   <br>
+   <a href="lab6-functions/lab6a.html">Lab6A: Functions</a>
+   <br>
+   <a href="lab6-functions/lab6b.html">Lab6B: Functions</a>
+   <br>
+   <a href="lab7-events/lab7a.html">Lab7A: Events</a>
+   <br>
+   <a href="lab7-events/lab7b.html">Lab7B: Events</a>
+   <br>
+   <a href="lab8-arrays/lab8.html">Lab8: Arrays</a>
+   <br>
+   <a href="lab9-objects/lab9.html">Lab9: Objects</a>
+   <br>
+   <br>
+   <a href="midterm1/examparta.html">Midterm1: Part A</a>
+   <br>
+   <br>
+   <a href="projecteuler/projecteuler.html">Term Project: Project Euler</a>
 </body>
 </html>
