--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <br>
    <a href="lab3-canvas/lab3.html">Lab3: Canvas</a>
    <br>
-   <a href="lab4-ifstatementspromt/lab4a.html">Lab4A: If Statements and Promt</a>
+   <a href="lab4-ifstatementspromt/lab4a.html">Lab4A: If Statements and Promt A</a>
    <br>
    <a href="lab4-ifstatementspromt/lab4b.html">Lab4B: If Statements and Promt B</a>
    <br>
